-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.11.0
-
None
-
Arch Linux x86_64, self build Qt
Trusted X11 forwarding (ssh -Y) of Qt applications doesn't work in 5.11. Only a frozen empty window is diaplayed. Regular X11 forwarding (ssh -X) works fine, and downgrading to 5.10.1 makes it work again.
- is duplicated by
-
QTBUG-97595 qt.qpa.xcb: xcb_shm_create_segment() failed for size 1228800
-
- Closed
-
For Gerrit Dashboard: QTBUG-68783 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
231408,9 | xcb: fix regression with remote X11 clients | 5.11.1 | qt/qtbase | Status: MERGED | +2 | 0 |
232133,7 | WIP: xcb: testing | 5.11.1 | qt/qtbase | Status: ABANDONED | -2 | 0 |
232301,3 | xcb: add QT_XCB_NO_MITSHM envvar for disabling MIT-SHM extension | 5.11.1 | qt/qtbase | Status: MERGED | +2 | 0 |