xcb: add QT_XCB_NO_MITSHM envvar for disabling MIT-SHM extension

We had something like this already in Qt4: QT_X11_NO_MITSHM
The logic from 67227aeffdf94be8d177309d27291d5b3247586c not always
works. There can still be cases that xcb_shm_attach_checked()
returns with no errors on remote clients.

Task-number: QTBUG-68783
Change-Id: Idd27ac66eb8f1114e3d1e1ddaaab2b00f235c561
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>